# project_TeamForecast

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  TeamForecast.pro  aboutdialog.cpp  aboutdialog.h  basiclocationdialog.cpp  basiclocationdialog.h  currentforecast.cpp  currentforecast.h  currentwidget.cpp  currentwidget.h  dailyforecast.cpp  dailyforecast.h  dailywidget.cpp  dailywidget.h  darkoverlayeffect.cpp  darkoverlayeffect.h  editlocationdialog.cpp  editlocationdialog.h  expandingweatherwidget.cpp  expandingweatherwidget.h  hintwidget.cpp  hintwidget.h  hourlyforecast.cpp  hourlyforecast.h  hourlywidget.cpp  hourlywidget.h  locationforecast.cpp  locationforecast.h  main.cpp  mainforecast.cpp  mainforecast.h  mainwindow.cpp  mainwindow.h  newlocationdialog.cpp  newlocationdialog.h  resources.qrc  (+8 more)
base/: animatedbutton.cpp  animatedbutton.h  animatedwidget.cpp  animatedwidget.h  appstyle.cpp  appstyle.h  scrollareawrapper.cpp  scrollareawrapper.h  textwidget.cpp  textwidget.h
dialogs/: aboutdialog.cpp  aboutdialog.h  basiclocationdialog.cpp  basiclocationdialog.h  editlocationdialog.cpp  editlocationdialog.h  locationsmanagerview.cpp  locationsmanagerview.h  newlocationdialog.cpp  newlocationdialog.h  roundeddialog.cpp  roundeddialog.h  settingsdialog.cpp  settingsdialog.h
docs/html/: aboutdialog_8h_source.html  basiclocationdialog_8h_source.html  class_about_dialog-members.html  class_about_dialog.html  class_about_dialog__inherit__graph.map  class_basic_location_dialog-members.html  class_basic_location_dialog.html  class_basic_location_dialog__coll__graph.map  class_basic_location_dialog__coll__graph.md5  class_basic_location_dialog__inherit__graph.md5  class_basic_location_dialog_a726e6fc5476ce1fdf126fbe23e61c80d_cgraph.md5  class_basic_location_dialog_aa5be441feb51fba398f88a56da83fef8_icgraph.md5  class_basic_location_dialog_abf6890c68f97469339ad22530545d0a4_icgraph.map  class_basic_location_dialog_abf6890c68f97469339ad22530545d0a4_icgraph.md5  class_basic_location_dialog_aff5155c63a3c8a966d0a1d5702cca7df_icgraph.map  class_current_widget.html  class_current_widget__inherit__graph.md5  class_daily_widget.html  class_dark_overlay_effect.html  class_dark_overlay_effect__coll__graph.map  class_dark_overlay_effect__inherit__graph.md5  class_edit_location_dialog-members.html  class_edit_location_dialog.html  class_edit_location_dialog__inherit__graph.md5  class_expanding_weather_widget-members.html  class_expanding_weather_widget.html  class_expanding_weather_widget__inherit__graph.map  class_hourly_widget-members.html  class_hourly_widget.html  class_hourly_widget__coll__graph.map  class_location_forecast-members.html  class_location_forecast.html  class_location_forecast__coll__graph.map  class_location_forecast__inherit__graph.map  class_main_window.html  class_main_window__coll__graph.map  class_main_window__coll__graph.md5  class_main_window_a4e20a4a065fbb0e4d3532a45a0a91425_cgraph.map  class_main_window_a588a94b5856247831d038015ea13f29f_cgraph.map  class_main_window_a588a94b5856247831d038015ea13f29f_cgraph.md5  (+35 more)
documentation/: Doxyfile
documentation/html/: _r_e_a_d_m_e_8md.html  aboutdialog_8cpp.html  aboutdialog_8cpp__incl.map  aboutdialog_8cpp__incl.md5  aboutdialog_8h.html  aboutdialog_8h__dep__incl.map  aboutdialog_8h__dep__incl.md5  aboutdialog_8h__incl.map  aboutdialog_8h__incl.md5  aboutdialog_8h_source.html  annotated.html  basiclocationdialog_8cpp.html  basiclocationdialog_8cpp__incl.map  basiclocationdialog_8cpp__incl.md5  basiclocationdialog_8h.html  basiclocationdialog_8h__dep__incl.map  basiclocationdialog_8h__dep__incl.md5  basiclocationdialog_8h__incl.map  basiclocationdialog_8h__incl.md5  basiclocationdialog_8h_source.html  class_about_dialog.html  class_about_dialog__coll__graph.md5  class_basic_location_dialog.html  class_basic_location_dialog__inherit__graph.map  class_basic_location_dialog_a726e6fc5476ce1fdf126fbe23e61c80d_cgraph.map  class_basic_location_dialog_aa5be441feb51fba398f88a56da83fef8_icgraph.map  class_basic_location_dialog_aff5155c63a3c8a966d0a1d5702cca7df_icgraph.md5  class_current_widget-members.html  class_current_widget.html  class_current_widget__coll__graph.map  class_current_widget_a188dde642577f406a81677acb11f4075_cgraph.map  class_current_widget_a188dde642577f406a81677acb11f4075_cgraph.md5  class_current_widget_a82bba6dc50aaa7a6ada2895df6b2e52d_cgraph.map  class_current_widget_a82bba6dc50aaa7a6ada2895df6b2e52d_cgraph.md5  class_current_widget_a82bba6dc50aaa7a6ada2895df6b2e52d_icgraph.map  class_current_widget_a82bba6dc50aaa7a6ada2895df6b2e52d_icgraph.md5  class_daily_widget-members.html  class_daily_widget.html  class_daily_widget__inherit__graph.map  class_daily_widget__inherit__graph.md5  (+213 more)
models/: abstractweathermodel.cpp  abstractweathermodel.h  currentmodel.cpp  currentmodel.h  dailymodel.cpp  dailymodel.h  hourlymodel.cpp  hourlymodel.h  locationmodel.cpp  locationsmanager.cpp  locationsmanager.h
src/: darkoverlayeffect.cpp  darkoverlayeffect.h  hintwidget.cpp  hintwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  roundedmenu.cpp  roundedmenu.h
src/base/: animatedbutton.cpp  animatedbutton.h  animatedwidget.cpp  animatedwidget.h  appstyle.cpp  appstyle.h  basewidget.cpp  basewidget.h  scrollareawrapper.cpp  scrollareawrapper.h  textwidget.cpp  textwidget.h
src/dialogs/: aboutdialog.cpp  aboutdialog.h  basiclocationdialog.cpp  basiclocationdialog.h  editlocationdialog.cpp  editlocationdialog.h  locationsmanagerview.cpp  (+7 more)
views/: currentwidget.cpp  currentwidget.h  dailywidget.cpp  dailywidget.h  expandingweatherwidget.cpp  expandingweatherwidget.h  hourlywidget.cpp  hourlywidget.h  locationforecast.cpp  locationforecast.h  locationminiview.cpp  locationminiview.h
(+105 files in other folders)
